crates/toml_edit/fixtures/invalid/control/string-bs.stderr
TOML parse error at line 1, column 23
  |
1 | string-bs = "backspace"
  |                       ^
Invalid basic string
